RESOLVED FIXED288655
REGRESSION(Sequoia): [ macOS Sequoia wk2 Debug x86_64 ] webrtc/captureCanvas-webrtc-software-h264-high.html is a constant failure.
https://bugs.webkit.org/show_bug.cgi?id=288655
Summary REGRESSION(Sequoia): [ macOS Sequoia wk2 Debug x86_64 ] webrtc/captureCanvas-...
Yasmin Karimi
Reported 2025-02-26 15:05:02 PST
webrtc/captureCanvas-webrtc-software-h264-high.html This test is a constant failure on macOS Sequoia wk2 Debug x86_64. HISTORY: https://results.webkit.org/?suite=layout-tests&test=webrtc%2FcaptureCanvas-webrtc-software-h264-high.html DIFF: @@ -1,4 +1,4 @@ -PASS captureStream with webrtc - h264 high profile +FAIL captureStream with webrtc - h264 high profile promise_test: Unhandled rejection with value: "test2 failed: tried 200 to get true but got false" DIFF URL: https://build.webkit.org/results/Apple-Sequoia-Debug-WK2-Tests/290817@main%20(921)/webrtc/captureCanvas-webrtc-software-h264-high-pretty-diff.html REPRODUCIBILITY: I was able to reproduce this failure on MacOS Sequoia 15.3.1 (24D70 / x86_64) at ToT with the following command: run-webkit-tests webrtc/captureCanvas-webrtc-software-h264-high.html --debug --iterations 5
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-26 15:05:19 PST
EWS
Comment 2 2025-02-26 15:53:10 PST
Test gardening commit 291172@main (aec0efd96895): <https://commits.webkit.org/291172@main> Reviewed commits have been landed. Closing PR #41456 and removing active labels.
EWS
Comment 3 2025-03-05 05:43:29 PST
Committed 291620@main (3d8e0be1db6a): <https://commits.webkit.org/291620@main> Reviewed commits have been landed. Closing PR #41906 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.