REGRESSION(Sequoia): [ macOS Sequoia wk2 Debug x86_64 ] webrtc/captureCanvas-webrtc-software-h264-high.html is a constant failure. rdar://145695939 https://bugs.webkit.org/show_bug.cgi?id=288655

Reviewed by Philippe Normand.

We had bugs related to software H264 encoding on intel macOS and added related tests.
This test infrastructure was only available if H264 encoding was done within WebProcess, which is now an unsupported configuration.
We remove the test and corresponding obsolete test infrastructure.

* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/mac-site-isolation/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* LayoutTests/platform/mac/TestExpectations:
* LayoutTests/platform/mac/webrtc/captureCanvas-webrtc-software-encoder-expected.txt: Removed.
* LayoutTests/platform/mac/webrtc/captureCanvas-webrtc-software-encoder.html: Removed.
* LayoutTests/platform/wpe/TestExpectations:
* LayoutTests/webrtc/captureCanvas-webrtc-software-h264-baseline-expected.txt: Removed.
* LayoutTests/webrtc/captureCanvas-webrtc-software-h264-baseline.html: Removed.
* LayoutTests/webrtc/captureCanvas-webrtc-software-h264-high-expected.txt: Removed.
* LayoutTests/webrtc/captureCanvas-webrtc-software-h264-high.html: Removed.
* Source/ThirdParty/libwebrtc/Configurations/libwebrtc.exp:
* Source/ThirdParty/libwebrtc/Source/webrtc/webkit_sdk/WebKit/WebKitEncoder.mm:
(webrtc::setH264HardwareEncoderAllowed): Deleted.
(webrtc::isH264HardwareEncoderAllowed): Deleted.
* Source/ThirdParty/libwebrtc/Source/webrtc/webkit_sdk/WebKit/WebKitUtilities.h:
* Source/ThirdParty/libwebrtc/Source/webrtc/webkit_sdk/objc/components/video_codec/RTCVideoEncoderH264.mm:
(-[RTCVideoEncoderH264 resetCompressionSessionWithPixelFormat:]):
* Source/WebCore/platform/mediastream/WebRTCProvider.cpp:
(WebCore::WebRTCProvider::webRTCAvailable):
(WebCore::WebRTCProvider::setH264HardwareEncoderAllowed): Deleted.
* Source/WebCore/platform/mediastream/WebRTCProvider.h:
* Source/WebCore/platform/mediastream/gstreamer/GStreamerWebRTCProvider.cpp:
(WebCore::WebRTCProvider::setH264HardwareEncoderAllowed): Deleted.
* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:
(WebCore::WebRTCProvider::setH264HardwareEncoderAllowed): Deleted.
* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProviderCocoa.cpp:
(WebCore::WebRTCProvider::setH264HardwareEncoderAllowed): Deleted.
* Source/WebCore/testing/Internals.cpp:
(WebCore::Internals::resetToConsistentState):
(WebCore::Internals::setH264HardwareEncoderAllowed): Deleted.
* Source/WebCore/testing/Internals.h:
* Source/WebCore/testing/Internals.idl:

Canonical link: https://commits.webkit.org/291620@main