Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProviderCocoa.cpp
@@ -56,12 +56,6 @@ UniqueRef<WebRTCProvider> WebRTCProvider::create()
     return makeUniqueRef<LibWebRTCProviderCocoa>();
 }
 
-void WebRTCProvider::setH264HardwareEncoderAllowed(bool allowed)
-{
-    if (webRTCAvailable())
-        webrtc::setH264HardwareEncoderAllowed(allowed);
-}
-
 LibWebRTCProviderCocoa::~LibWebRTCProviderCocoa()
 {
 }
